--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Allison Warhus
 description: This is a blog set up for ST558, fall 2021. My last semester before graduation!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/awarhus/awarhus.github.io/master/images/avatar.jpg
 
 #
 # Flags below are optional
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: awarhus@ncsu.edu
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: b
   instagram:
   linkedin:
   pinterest:
