--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Allison Warhus
 description: This is a blog set up for ST558, fall 2021. My last semester before graduation!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/awarhus/awarhus.github.io/master/images/avatar.PGN
+avatar: https://raw.githubusercontent.com/awarhus/awarhus.github.io/master/images/avatar.PNG
 
 #
 # Flags below are optional
